<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/levelup"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center">

	<TextView 
		android:text="@string/levelup_header_text" 
		android:gravity="center"
		android:textColor="#4444FF"
		android:textSize="45sp" 
		android:textStyle="bold" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:typeface="serif" />

	<LinearLayout
	android:id="@+id/levelup_table"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TableLayout 
			android:layout_marginRight="20dip"
			android:layout_marginLeft="20dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
	
			<TableRow android:visibility="invisible" android:gravity="center">
				<TextView
					android:text="X0"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" 
					android:background="#FFFF0000"/>
				<TextView
					android:text="000="
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" 
					android:background="#FFFF0000"/>
				<TextView
					android:text="DOUBLES"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" 
					android:background="#FFFF0000"/>
    		</TableRow>

			<TableRow android:gravity="center">
				<TextView 
					android:id="@+id/levelup_singles"
					android:text="99" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#D0D0D0"
					android:textStyle="bold" />
				<TextView 
					android:layout_span="2"
         		android:gravity="right"
					android:text="@string/levelup_singles" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>

			<TableRow android:gravity="center">
				<TextView 
					android:layout_span="2"
					android:text="X100=" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#B0B0B0"
					android:textStyle="bold" />
				<TextView 
					android:id="@+id/levelup_singles_sum" 
					android:layout_column="2"
         		android:gravity="right"
					android:text="99999" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>

			<TableRow android:gravity="center" android:paddingTop="10dip">
				<TextView 
					android:id="@+id/levelup_doubles" 
					android:text="99" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#D0D0D0"
					android:textStyle="bold" />
				<TextView 
					android:layout_span="2" 
         		android:gravity="right"
         		android:text="@string/levelup_doubles"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>

			<TableRow android:gravity="center">
				<TextView 
					android:layout_span="2" 
					android:text="X400=" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#B0B0B0"
					android:textStyle="bold" />
				<TextView 
					android:id="@+id/levelup_doubles_sum" 
         		android:gravity="right"
					android:text="99999" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>
			
		</TableLayout>

		<TableLayout 
			android:layout_marginLeft="20dip"
			android:layout_marginRight="20dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TableRow android:visibility="invisible" android:gravity="center">
				<TextView
					android:text="X0"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" 
					android:background="#FFFF0000"/>
				<TextView
					android:text="000="
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" 
					android:background="#FFFF0000"/>
				<TextView
					android:text="DOUBLES"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" 
					android:background="#FFFF0000"/>
    		</TableRow>

			<TableRow android:gravity="center">
				<TextView 
					android:id="@+id/levelup_triples" 
					android:text="99" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#D0D0D0"
					android:textStyle="bold" />
				<TextView 
					android:layout_span="2" 
         		android:gravity="right"
					android:text="@string/levelup_triples" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>

			<TableRow android:gravity="center">
				<TextView 
					android:layout_span="2" 
					android:text="X900=" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#B0B0B0"
					android:textStyle="bold" />
				<TextView 
					android:id="@+id/levelup_triples_sum" 
         		android:gravity="right"
					android:text="99999" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>

			<TableRow android:gravity="center" android:paddingTop="10dip">
				<TextView 
					android:id="@+id/levelup_tetroid" 
					android:text="99" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#D0D0D0"
					android:textStyle="bold" />
				<TextView 
					android:layout_span="2" 
         		android:gravity="right"
					android:text="@string/levelup_tetroid" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>
	
			<TableRow android:gravity="center">
				<TextView 
					android:layout_span="2" 
					android:text="X2500=" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="#B0B0B0"
					android:textStyle="bold" />
				<TextView 
					android:id="@+id/levelup_tetroid_sum" 
         		android:gravity="right"
					android:text="99999" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textStyle="bold" />
			</TableRow>

		</TableLayout>
		
	</LinearLayout>

 	
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:layout_marginTop="20sp">

		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/levelup_bonus_text"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold" />

		<TextView 
			android:id="@+id/levelup_total" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="15sp" 
			android:text="99999" 
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold" />
			
	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		android:layout_marginTop="10sp">

		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/levelup_score_text"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold" />

		<TextView 
			android:id="@+id/levelup_score" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="15sp" 
			android:text="99999" 
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold" />
			
	</LinearLayout>
 
 </LinearLayout>
